--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <!-- 预加载关键图片 -->
     <link rel="preload" href="images/1.jpg" as="image">
     <link rel="preload" href="audio/祝你生日快乐_爱给网_aigei_com.mp3" as="audio">
+    <!-- 移动端检测和重定向 -->
+    <script>
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+            if (window.location.pathname !== '/mobile.html') {
+                window.location.href = '/mobile.html';
+            }
+        }
+    </script>
 </head>
 <body>
     <!-- 页面加载器 -->
