添加GitHub Pages部署配置和CDN优化版本，提高国内访问速度

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <!-- 性能优化 -->
-    <meta name="dns-prefetch" content="//vercel.app">
-    <meta name="preconnect" content="//vercel.app">
+    <!-- 性能优化 - CDN预连接 -->
+    <meta name="dns-prefetch" content="//cdn.jsdelivr.net">
+    <meta name="dns-prefetch" content="//unpkg.com">
+    <meta name="preconnect" content="//cdn.jsdelivr.net">
+    <meta name="preconnect" content="//unpkg.com">
     <title>给老婆的生日惊喜</title>
     <link rel="stylesheet" href="style.css">
     <!-- 移除Font Awesome CDN依赖，使用Unicode符号提高加载速度 -->
