--- a/mobile.html
+++ b/mobile.html
@@ -80,6 +80,12 @@
         </main>
     </div>
 
+    <!-- 背景音乐 -->
+    <audio id="bgMusic" loop>
+        <source src="audio/祝你生日快乐_爱给网_aigei_com.mp3" type="audio/mpeg">
+        您的浏览器不支持音频播放。
+    </audio>
+
     <script src="mobile.js" defer></script>
 </body>
 </html>
