优化移动端样式：修复按钮居中问题，增强蛋糕样式并添加蜡烛动画

--- a/mobile.html
+++ b/mobile.html
@@ -68,6 +68,20 @@
                             <div class="layer layer-bottom"></div>
                             <div class="layer layer-middle"></div>
                             <div class="layer layer-top"></div>
+                            <div class="candles">
+                                <div class="candle">
+                                    <div class="flame"></div>
+                                </div>
+                                <div class="candle">
+                                    <div class="flame"></div>
+                                </div>
+                                <div class="candle">
+                                    <div class="flame"></div>
+                                </div>
+                                <div class="candle">
+                                    <div class="flame"></div>
+                                </div>
+                            </div>
                             <div class="cake-text">老婆生日快乐</div>
                         </div>
                     </div>
