--- a/mobile.html
+++ b/mobile.html
@@ -65,24 +65,18 @@
                     <h3>一个特别的蛋糕送给你</h3>
                     <div class="cake-container">
                         <div class="cake">
+                            <div class="plate"></div>
                             <div class="layer layer-bottom"></div>
                             <div class="layer layer-middle"></div>
                             <div class="layer layer-top"></div>
-                            <div class="candles">
-                                <div class="candle">
-                                    <div class="flame"></div>
-                                </div>
-                                <div class="candle">
-                                    <div class="flame"></div>
-                                </div>
-                                <div class="candle">
-                                    <div class="flame"></div>
-                                </div>
-                                <div class="candle">
-                                    <div class="flame"></div>
-                                </div>
-                            </div>
+                            <div class="icing"></div>
+                            <div class="drip drip1"></div>
+                            <div class="drip drip2"></div>
+                            <div class="drip drip3"></div>
                             <div class="cake-text">老婆生日快乐</div>
+                            <div class="candles">
+                                <!-- 29根蜡烛将由JavaScript动态插入 -->
+                            </div>
                         </div>
                     </div>
                     <div class="cake-buttons">
